overflow fix

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -344,17 +344,21 @@ body
   .projects.view  
     #projects
       .arrow
+        top: 320px;
         &.prev
           left: 10px
         &.next
           margin-right: 10px
+      h1
+        font-size: 60px
+        line-height: 55px
       h2
         margin: 10px 0 5px
       .screenshots
-        margin-right: 55px
+        margin-right: 65px
       .copy
         header,section
-          margin-left: 55px
+          margin-left: 65px
         p
           font-size: 12px
           line-height: 14px
